tests/ui/diagnostic_namespace/do_not_recommend/type_mismatch.current.stderr
error[E0277]: Very important message!
  --> $DIR/type_mismatch.rs:24:14
   |
LL |     verify::<u8>();
   |              ^^ the trait `TheImportantOne` is not implemented for `u8`
   |
note: required by a bound in `verify`
  --> $DIR/type_mismatch.rs:21:14
   |
LL | fn verify<T: TheImportantOne>() {}
   |              ^^^^^^^^^^^^^^^ required by this bound in `verify`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
